--- a/latex/bib/pulp.bib
+++ b/latex/bib/pulp.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeremy Clark at 2020-01-17 12:49:59 -0500 
+%% Created for Jeremy Clark at 2020-02-18 12:19:49 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{CDM20,
+	Author = {Jeremy Clark and Didem Demirag and Seyedehmahsa Moosavi},
+	Date-Added = {2020-02-18 12:18:58 -0500},
+	Date-Modified = {2020-02-18 12:19:49 -0500},
+	Journal = {Communications of the ACM},
+	Title = {Demystifying Stablecoins},
+	Year = {2020}}
+
+@inproceedings{cite-key,
+	Date-Added = {2020-02-18 12:18:23 -0500},
+	Date-Modified = {2020-02-18 12:18:23 -0500}}
 
 @article{NaCl17,
 	Author = {A Narayanan and J Clark},
@@ -22,7 +34,7 @@
 	Author = {Erica Pimentel and Emilio Boulianne and Shayan Eskandari and Jeremy Clark},
 	Date-Added = {2020-01-17 12:29:03 -0500},
 	Date-Modified = {2020-01-17 12:29:43 -0500},
-	Howpublished = {SSRN },
+	Howpublished = {SSRN},
 	Title = {Systemizing the Challenges of Auditing Blockchain-Based Assets},
 	Year = {2019}}
 
