--- a/latex/main.tex
+++ b/latex/main.tex
@@ -8,12 +8,11 @@
 
 \begin{document}
 
-\title{Demystifying Stablecoins}
-\subtitle{Cryptography meets monetary policy}
+\title{SoK: Demystifying Stablecoins}
+\titlenote{This draft is an author's preprint of~\cite{CDM20} with a full appendix. Authors listed alphabetically. D. Demirag and S. Moosavi should be considered equal first authors.}
 
 \author{Jeremy Clark}
 \affiliation{\institution{Concordia University}}
-\authornote{Authors listed alphabetically. D. Demirag and S. Moosavi should be considered equal first authors.}
 
 \author{Didem Demirag}
 \affiliation{\institution{Concordia University}}
@@ -22,6 +21,10 @@
 \affiliation{\institution{Concordia University}}
 
 \begin{abstract} Stablecoins promise the functionality of Bitcoin without the rollercoaster ride of its exchange rate. But can this new breed of cryptocurrency really outsmart decades of central bank policy with algorithms and smart contracts?\end{abstract}
+
+\makeatletter
+\let\@authorsaddresses\@empty
+\makeatother
 
 \maketitle
 
@@ -36,8 +39,11 @@
 
 %==========================================%
 
-% \input{sections/appendix}
+\input{sections/appendix}
 
+%==========================================%
+
+\clearpage
 \begin{Sidebar*}[h!]
 \begin{framed}
 \begin{flushleft}
@@ -63,9 +69,9 @@ https://queue.acm.org/detail.cfm?id=3305265
 \begin{flushleft}
 \textbf{Authors.} \newline
 
-\textbf{Jeremy Clark} is an associate professor at the Concordia Institute for Information Systems Engineering in Montreal, Canada, where he holds the NSERC/RCGT/Catallaxy Industrial Research Chair in Blockchain Technologies. He collaborates regularly with government agencies on voting and blockchain technologies. \newline
+\textbf{Jeremy Clark} is an associate professor at the Concordia Institute for Information Systems Engineering in Montreal, Canada, where he holds the NSERC/Raymond Chabot Grant Thornton/Catallaxy Industrial Research Chair in Blockchain Technologies. He collaborates regularly with government agencies on voting and blockchain technologies. \newline
 
-\textbf{Didem Demirag} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal, Canada. She is interested in applied cryptography, genomic privacy, blockchain applications. She is currently working on realizing secure function evaluation using blockchain and is an intern at Autorit\'e des March\'es Financiers, Montreal.
+\textbf{Didem Demirag} is a PhD student at the Concordia Institute for Information Systems Engineering in Montreal, Canada. She is interested in applied cryptography, genomic privacy, and blockchain applications. She is currently working on realizing secure function evaluation using blockchain and is an intern at the Autorit\'e des March\'es Financiers, Montreal.
  \newline
 
 \textbf{Seyedehmahsa Moosavi} is a Ph.D. student at the Concordia Institute for Information Systems Engineering in Montreal, Canada. She previously worked as a research intern at the Autorité des Marchés Financiers, Québec, and now focuses on understanding the future of financial technologies (FinTech) using blockchains. \newline
