--- a/latex/tables/eval.tex
+++ b/latex/tables/eval.tex
@@ -3,7 +3,7 @@
 \begin{table}[t!]
 \centering
 
-	\begin{tabular}{ lllllllll}
+	\begin{tabular}{llllllllll}
 
 &
 \headrow{Corrects undervaluation} &
@@ -11,28 +11,31 @@
 \headrow{Decentralizes issuance } &
 \headrow{Decentralizes redemption} &
 \headrow{Decentralizes transfer} &
-\headrow{No trusted oracle} \\
+\headrow{No trusted oracle} &
+\headrow{Any asset} &
+\headrow{Any price level} &
+\headrow{Any event} \\
 \hline
 
-	 \multicolumn{1}{c}{\textit{Mechanism} } &    \multicolumn{2}{|c|}{Price} &  \multicolumn{4}{c}{Trust}  \\
+	 \multicolumn{1}{c|}{\textit{Mechanism} } &    \multicolumn{2}{c|}{Price} &  \multicolumn{4}{c|}{Trust} &  \multicolumn{3}{c|}{Target} \\
 
 	\hline
 
-	Traditional Digital Cash			& \multicolumn{1}{|c|}{\full} & \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c}{\full}   \\
+	Traditional Digital Cash	& \multicolumn{1}{|c|}{\full} & \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{}   \\
 	
-	Traditional Cryptocurrency			& \multicolumn{1}{|c|}{} & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{$\times$} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c}{\full}   \\
+	Traditional Cryptocurrency & \multicolumn{1}{|c|}{} & \multicolumn{1}{c|}{}   & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{$\times$} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} \\
 
 	\hline
 
-	Directly Backed and Redeemable	& \multicolumn{1}{|c|}{\full} 	& \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{} 		& \multicolumn{1}{c|}{} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c}{\full}    \\
-	Directly Backed                              	& \multicolumn{1}{|c|}{} 		& \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{ } 	& \multicolumn{1}{c|}{} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c}{\full}    \\
-	Indirectly Backed 				& \multicolumn{1}{|c|}{\prt} 	& \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c}{}    \\      
+	Directly Backed and Redeemable	& \multicolumn{1}{|c|}{\full} 	& \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{} 		& \multicolumn{1}{c|}{} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full}  & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{}   \\
+	Directly Backed                              	& \multicolumn{1}{|c|}{} 		& \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{ } 	& \multicolumn{1}{c|}{} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{}    \\
+	Indirectly Backed 				& \multicolumn{1}{|c|}{\prt} 	& \multicolumn{1}{c|}{\full}   & \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{}  & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{}   \\      
 %	Market Manipulation                       	& \multicolumn{1}{|c|}{\prt} 		& \multicolumn{1}{c|}{\prt}   & \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{$\times$} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c}{}    \\ \hline
-	Money Supply Adjustments             	& \multicolumn{1}{|c|}{?} 		& \multicolumn{1}{c|}{\prt}   & \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{$\times$} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c}{}    \\
-	Asset Transfer	                                & \multicolumn{1}{|c|}{?} 		& \multicolumn{1}{c|}{\prt}   & \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{$\times$} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c}{}    \\
+	Money Supply Adjustments             	& \multicolumn{1}{|c|}{?} 		& \multicolumn{1}{c|}{\prt}   & \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{$\times$} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\prt}  & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full}   \\
+	Asset Transfer	                                & \multicolumn{1}{|c|}{?} 		& \multicolumn{1}{c|}{\prt}   & \multicolumn{1}{c|}{\full} 	& \multicolumn{1}{c|}{$\times$} 		& \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\prt}  & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full} & \multicolumn{1}{c|}{\full}   \\
 	\hline
 
 	\end{tabular}
-	\caption{Comparative evaluation of mechanisms to design stablecoins: {\full} indicates the properties (columns) are fulfilled by the corresponding mechanism (rows) within reason, {\prt} means the property is fulfilled but the fulfillment is bounded, {?} indicates a heuristic has been proposed for stability and the conditions under which it will work are not well-established enough to evaluate, and $\times$ indicates the property is not applicable.
+	\caption{Comparative evaluation of mechanisms to design stablecoins: {\full} indicates the properties (columns) are fulfilled by the corresponding mechanism (rows) within reason, {\prt} means the property is fulfilled but the fulfillment is bounded, {?} indicates a heuristic has been proposed for stability and the conditions under which it will work are not well-established enough to evaluate, and $\times$ indicates the property is not applicable. Price and trust are explained in the main text and target is explained in Appendix~\ref{app:target}.
 	\label{tab:evframework}}
 \end{table}
