--- a/latex/sections/stablecoin.tex
+++ b/latex/sections/stablecoin.tex
@@ -174,9 +174,9 @@ The second subtype of intervention-based stability mechanism expands and contrac
 	\includegraphics[width=0.8\textwidth]{figures/newGraph.pdf}
 	\caption{\label{fig:vol}
 	Volatility in prices for two fiat currencies (CAD and EUR) and two stablecoins (Tether and BitUSD) against the USD and BTC.
-	Vertical line segments demonstrate USD stability. 
-	Horizontal show the currency tracking BTC.
-	For further interpretation, see~\cite{CDM19}.
+	Vertical line segments demonstrate stability with the USD. 
+	Horizontal shows volatility in USD.
+	For further interpretation, see Appendix~\ref{app:xchange}.
 	While CAD and EUR are not pegged to USD, they demonstrate a degree of stability not that different from the stablecoins. 
 	Prices from Jan 2017 to Nov 2018; 1000 mBTC = 1 BTC.}
 \end{figure*}
@@ -184,7 +184,7 @@ The second subtype of intervention-based stability mechanism expands and contrac
 
 \section{Discussion and Conclusion.}
 
-A more detailed version of this article is available as a whitepaper~\cite{CDM19}. It includes more detail about each coin, some empirical studies of how stable these coins are (see Figure~\ref{fig:vol} for a preview), and an evaluation of whether of Ethereum's mechanism for paying for computation (gas) is stable or not (the answer: it does not seem to be, for now).
+More details are available in the appendix. It includes more detail about each coin, some empirical studies of how stable these coins are (see Figure~\ref{fig:vol} for a preview), and an evaluation of whether of Ethereum's mechanism for paying for computation (gas) is stable or not (the answer: it does not seem to be, for now).
 
 In short, stablecoins might tokenize a low volatility coin and bring it onto the blockchain. Or they generally play one of two tricks. The first trick is to expand and contract the amount of currency to stabilize the value. The second trick is to turn two high volatility coins (\eg of the underlying cryptocurrency) into one stablecoin and one extremely volatile coin. This last trick is similar to other financial assets which do not reduce overall risk, but instead push it from one tranche of the asset to another.
 
